--- a/Studienarbeit/abstract.tex
+++ b/Studienarbeit/abstract.tex
@@ -2,11 +2,11 @@
 
 \renewcommand{\abstractname}{Zusammenfassung}
 \begin{abstract}
-Diese Studienarbeit handelt von der Entwicklung eines Frameworks automatisierter Tests für die Spiele-Engine Unity. Im Rahmen einer vorherigen Studienarbeit wurde versucht ein Spiel testgetrieben zu entwickeln. Dabei hat sich herausgestellt, dass die verhaltenssteuernden Komponenten eines Spiels nur marginal testen lassen. Aus diesem Grund möchte ich versuchen ein eigenes Framework zu entwickeln, welches einen größeren Funktionsumfang bietet. Dabei analysiere ich zunächst die schon vorhanden Frameworks, beschreibe einen möglichen Erstentwurf und anschließend die konkrete Implementierung.
+Diese Studienarbeit handelt von der Entwicklung eines Frameworks automatisierter Tests für die Spiele-Engine Unity. Im Rahmen einer vorherigen Studienarbeit wurde versucht ein Spiel testgetrieben zu entwickeln. Dabei hat sich herausgestellt, dass die verhaltenssteuernden Komponenten eines Spiels nur marginal testen lassen, ohne die Art zu entwickeln stark an eine mögliche Testbarkeit anzupassen. Aus diesem Grund möchte ich versuchen ein eigenes Framework zu entwickeln, welches einem mehr Möglichkeiten bietet. Als erstes Stelle ich die verschiedenen Arten von Tests vor. Als nächstes analysiere ich die schon vorhanden Frameworks und beschreibe einen möglichen Erstentwurf. Zum Schluss wird die konkrete Implementierung vorgestellt und ich gebe einen Ausblick auf die weiteren Entwicklungsmöglichkeiten.
 \end{abstract}
 
 
 \renewcommand{\abstractname}{Summary}
 \begin{abstract}
-Meh.
+This seminar paper is about the development of a test framework for the game engine Unity. In the context of a previous seminar paper had been tested, how to develop a game test driven. It turned out, that it's hard to test the compoments that define the behaviour of a game, without adapting the development for testability. For this reason I want to develop my own framework, which has more possibilites. At first I'll explain the different types of tests. Then I analyse the existing test frameworks and discribe a first design for my framework. Finally I present the concrete implementation and I give an outlook for future features.
 \end{abstract}
