--- a/Studienarbeit/literatur.tex
+++ b/Studienarbeit/literatur.tex
@@ -4,31 +4,16 @@
   \textsc{Steve Freeman und Nat Pryce}: 
   \textbf{Growing Object-Oriented Software, Guided by Tests}.
   2010, Addison-Wesley Professional, S. 1-67
-  
-  \bibitem[COC04]{COC04}
-    \textsc{Alistair Cockburn}: 
-    \textbf{Crystal Clear: A Human-Powered Methodology for Small Teams}.
-    2004, Addison-Wesley Professional
-  
-  \bibitem[FOW99]{FOW99}
-    \textsc{Martin Fowler u.a.}: 
-    \textbf{Refactoring: Improving the Design of Existing Code}.
-    1999, Addison-Wesley Professional
-  
-\bibitem[GAM94]{GAM94}
-  \textsc{Erich Gamma u.a.}
-  \textbf{Design Patterns – Elements of Reusable Object-Oriented Software}.
-  1994, Addison-Wesley Longman
-  
+    
 \bibitem[HEN10]{HEN10}
   \textsc{Ryan Henson Creighton}
   \textbf{Unity 3D Game Development by Example: Beginner's Guide}.
   2010, Packt Publishing
-  
-\bibitem[WIKI01]{WIKI01}
-  \textsc{Wikipedia}: 
-  \textbf{Tower Defense}.
-    \url{http://de.wikipedia.org/wiki/Tower\_Defense}, 23.11.2012
+      
+\bibitem[TDGD13]{TDGD13}
+  \textsc{Jonas Goldt und Lennart Hensler}
+  \textbf{Test Driven Game Development mit Unity 3D}.
+  2013, Studienarbeit DHBW Karlsruhe
 
 \end{thebibliography}
 
